<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">ZimLX</string>
    <string name="application_id" translatable="false">org.zimmob.zimlx</string>
    <string name="folder_name" translatable="false" />
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded apps are disabled in SafeMode</string>
    <string name="safemode_widget_error">Widgets are disabled in SafeMode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or to use custom actions.</string>
    <string name="widget_dims_format" translatable="false">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="out_of_space">No more room on this page.</string>
    <string name="hotseat_out_of_space">No more room in the favorites tray.</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in home.</string>
    <string name="permlab_write_settings">write home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in home.</string>
    <string name="msg_no_phone_permission"><xliff:g example="Launcher3" id="app_name">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g example="Messenger" id="app_name">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> downloading, <xliff:g example="30%" id="progress">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> waiting to install</string>
    <string name="action_add_to_workspace">Add to home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g example="1" id="number">%1$d</xliff:g> column <xliff:g example="1" id="number">%2$d</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g example="1" id="number">%1$d</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g example="1" id="number">%1$d</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g example="Messenger" id="name">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="about_title">About</string>
    <string name="about_pref_summary">Get to know about the ZimLX team</string>
    <string name="hotseat_uses_extracted_colors_pref_title">Dock uses wallpaper colors</string>
    <string name="hotseat_show_arrow">Show arrow</string>
    <string name="hotseat_show_page_indicator">Show page indicator</string>
    <string name="hotseat_uses_extracted_colors_pref_on">The dock will be colored with a color extracted from the wallpaper</string>
    <string name="hotseat_uses_extracted_colors_pref_off">The dock will be colored gray, but adjusted by the wallpaper brightness</string>
    <string name="transparent_hotseat_pref_title">Transparent dock</string>
    <string name="pref_iconLabelsInTwoLines">Icon labels use two lines</string>
    <string name="hide_all_apps_icon_labels_pref_title">Hide icon labels in drawer</string>
    <string name="all_apps_opacity_pref_title">Drawer opacity</string>
    <string name="num_hotseat_icons_pref_title">Number of icons in dock</string>
    <string name="icon_scale_pref_title">Icon scale</string>
    <string name="hotseat_height_scale">Height scale</string>
    <string name="hotseat_custom_opacity">Dock opacity</string>
    <string name="hotseat_uses_custom_opacity">Custom dock opacity</string>
    <string name="icon_text_scale_pref_title">Icon text scale</string>
    <string name="icon_text_padding_scale_pref_title">Icon padding scale</string>
    <string name="general_pref_title">Desktop</string>
    <string name="dock_pref_title">Dock</string>
    <string name="app_drawer_pref_title">App drawer</string>
    <string name="pixel_ui_pref_title">Theme</string>
    <string name="behavior_pref_title">Behavior</string>
    <string name="debug_pref_title">Debug</string>
    <string name="general_pref_summary">Customize your desktop</string>
    <string name="dock_pref_summary">Customize your dock</string>
    <string name="app_drawer_pref_summary">Customize your app drawer</string>
    <string name="pixel_ui_pref_summary">Theme different elements</string>
    <string name="behavior_pref_summary">Change the behavior of ZimLX</string>
    <string name="backup_pref_summary">Backup\/restore your settings and database</string>
    <string name="debug_pref_summary">Restart or rebuild icon database</string>
    <string name="use_round_searhbar">Use round apps searchbar</string>
    <string name="show_google_now_tab_pref_title">Show Google Now page</string>
    <string name="pinch_to_overview_pref_title">Pinch to overview</string>
    <string name="pinch_to_overview_pref_summary">Pinch on the desktop to open the overview</string>
    <string name="keep_scroll_state_pref_title">Save scroll position</string>
    <string name="keep_scroll_state_pref_summary">Saves the scroll position in the drawer</string>
    <string name="home_opens_drawer_pref_title">Home button opens app drawer</string>
    <string name="home_opens_drawer_pref_summary">Pressing the home button while on the desktop will open the app drawer</string>
    <string name="show_hidden_pref_title">Show hidden apps</string>
    <string name="show_hidden_pref_on">Hidden apps will be shown to change visibility settings</string>
    <string name="show_hidden_pref_off">Hidden apps won\'t be visible</string>
    <string name="show_top_shadow_title">Show top shadow</string>
    <string name="hide_hotseat_pref_title">Hide dock</string>
    <string name="pull_down_action_pref_title">Pull down action</string>
    <string name="enable_screen_rotation">Screen rotation</string>
    <string name="use_system_fonts_title">Use system fonts for labels</string>
    <string name="num_cols_drawer_pref_title">Number of columns in drawer</string>
    <string name="shortcut_backport_warning">This could be slow, use at your own risk</string>
    <string name="pref_backport_shortcuts">Backport shortcuts</string>
    <string name="pref_all_apps_custom_label_color">Use custom label color</string>
    <string name="pref_all_apps_label_color">Color of icon labels in drawer</string>
    <string name="pref_num_rows_drawer">Number of rows in drawer</string>
    <string name="lock_desktop">Lock desktop</string>
    <string name="enable_spring_pref_title">Spring effect</string>
    <string name="hide_app">Hidden apps</string>
    <string name="hide_app_sum">Hide apps from the app drawer</string>
    <string name="two_row_dock">Two row dock</string>
    <string name="backups">Backups</string>
    <string name="pref_category_icons">Icons</string>
    <string name="pref_category_drawer">Drawer</string>
    <string name="pref_category_misc">Miscellaneous</string>
    <string name="pref_title__interfaces">Interfaces</string>
    <string name="pref_title__inputs">Gestures</string>
    <string name="pref_title__others">Others</string>
    <string name="pref_title__folder">Folder</string>
    <string name="pref_summary__folder">Change folder shape and color</string>
    <string name="pref_title__primary_color">Primary Color</string>
    <string name="pref_title__advanced">Advanced</string>
    <string name="pref_summary__advanced">Languaje and backup</string>
    <string name="pref_title__notifications">Notifications</string>
    <string name="pref_summary__language">Change language of this app.</string>
    <string name="pref_title__language">Language</string>
    <string name="pref_title__gestures">Gestures</string>
    <string name="pref_title__overall_animation_speed_modifier">Animation Speed</string>
    <string name="pref_summary__overall_animation_speed_modifier">Modify the overall speed of animations</string>
    <string name="dt2s_title">Double tap to sleep</string>
    <string name="predictive_apps_title">Predictive apps</string>
    <string name="predictive_apps_summary_on">Your favorite apps will appear at the top of the drawer</string>
    <string name="predictive_apps_summary_off">Your favorite apps won\'t appear at the top of the drawer</string>
    <string name="predictive_apps_num_title">Predicted apps number</string>
</resources>