<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="Settings">
    <PreferenceCategory android:title="@string/pref_title__interfaces">
        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_desktop"
            android:summary="@string/general_pref_summary"
            android:title="@string/general_pref_title"
            app:content="@xml/launcher_desktop_preferences" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_dock"
            android:summary="@string/dock_pref_summary"
            android:title="@string/dock_pref_title"
            app:content="@xml/launcher_dock_preferences" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_app_drawer"
            android:summary="@string/app_drawer_pref_summary"
            android:title="@string/app_drawer_pref_title"
            app:content="@xml/launcher_app_drawer_preferences" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_style"
            android:summary="@string/pixel_ui_pref_summary"
            android:title="@string/pixel_ui_pref_title"
            app:content="@xml/launcher_theme_preferences" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_folder_open"
            android:summary="@string/pref_summary__folder"
            android:title="@string/pref_title__folder"
            app:content="@xml/launcher_folder_preferences" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title__inputs">

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_behavior"
            android:summary="@string/behavior_pref_summary"
            android:title="@string/behavior_pref_title"
            app:content="@xml/launcher_behavior_preferences" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title__others">
        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_debug"
            android:summary="@string/debug_pref_summary"
            android:title="@string/debug_pref_title"
            app:content="@xml/launcher_debug_preferences"
            app:longClickContent="@xml/launcher_hidden_preferences" />

        <Preference
            android:icon="@drawable/ic_more_horiz"
            android:summary="@string/pref_summary__advanced"
            android:title="@string/pref_title__advanced"
            app:content="@xml/launcher_advanced_preferences"
            app:longClickContent="@xml/launcher_hidden_preferences" />

        <PreferenceScreen
            android:icon="@drawable/ic_information"
            android:key="@string/pref_key__cat_about"
            android:title="@string/about_title">

        </PreferenceScreen>
    </PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
