<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.preference.PreferenceCategory
        android:key="prefCat_dockOptions"
        android:title="@string/dock_pref_title">

        <org.zimmob.zimlx.preferences.SeekbarPreference
            android:key="pref_hotseatHeightScale"
            android:persistent="true"
            android:title="@string/hotseat_height_scale"
            app:defaultSeekbarValue="1.0"
            app:maxValue="1.5"
            app:minValue="0.5"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_twoRowDock"
            android:title="@string/two_row_dock" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_hotseatShouldUseCustomOpacity"
            android:persistent="true"
            android:title="@string/hotseat_uses_custom_opacity" />

        <org.zimmob.zimlx.preferences.SeekbarPreference
            android:dependency="pref_hotseatShouldUseCustomOpacity"
            android:key="pref_hotseatCustomOpacity"
            android:persistent="true"
            android:title="@string/hotseat_custom_opacity"
            app:defaultSeekbarValue="0.5"
            app:maxValue="1"
            app:minValue="0"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_hotseatShowArrow"
            android:persistent="true"
            android:title="@string/hotseat_show_arrow" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_hotseatShowPageIndicator"
            android:persistent="true"
            android:title="@string/hotseat_show_page_indicator" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="prefCat_dockIcons"
        android:title="@string/pref_category_icons">

        <ListPreference
            android:defaultValue="@string/generalDefault"
            android:entries="@array/numHotseatIconsTexts"
            android:entryValues="@array/numHotseatIconsValues"
            android:key="pref_numHotseatIcons"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/num_hotseat_icons_pref_title" />

        <org.zimmob.zimlx.preferences.SeekbarPreference
            android:key="pref_hotseatIconScale"
            android:persistent="true"
            android:title="@string/icon_scale_pref_title"
            app:defaultSeekbarValue="1.0"
            app:maxValue="1.5"
            app:minValue="0.3"
            app:steps="120"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="prefCat_dockMisc"
        android:title="@string/pref_category_misc">

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_hotseatShouldUseExtractedColors"
            android:persistent="true"
            android:summaryOff="@string/hotseat_uses_extracted_colors_pref_off"
            android:summaryOn="@string/hotseat_uses_extracted_colors_pref_on"
            android:title="@string/hotseat_uses_extracted_colors_pref_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_isHotseatTransparent"
            android:persistent="true"
            android:title="@string/transparent_hotseat_pref_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_isHotseatTransparent"
            android:key="pref_hideHotseat"
            android:persistent="true"
            android:title="@string/hide_hotseat_pref_title" />

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
