<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2015 Google Inc.
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="Settings">

    <PreferenceCategory android:title="@string/pref_title__interfaces">

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_desktop"
            android:layout="@layout/sub_preference"
            android:summary="@string/general_pref_summary"
            android:title="@string/general_pref_title"
            app:content="@xml/zim_preferences_desktop" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_dock"
            android:layout="@layout/sub_preference"
            android:summary="@string/dock_pref_summary"
            android:title="@string/dock_pref_title"
            app:content="@xml/zim_preferences_dock" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_app_drawer"
            android:layout="@layout/sub_preference"
            android:summary="@string/app_drawer_pref_summary"
            android:title="@string/app_drawer_pref_title"
            app:content="@xml/zim_preferences_app_drawer" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_style"
            android:layout="@layout/sub_preference"
            android:summary="@string/pixel_ui_pref_summary"
            android:title="@string/pixel_ui_pref_title"
            app:content="@xml/zim_preferences_theme" />
        <!--
        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_folder_open"
            android:layout="@layout/sub_preference"
            android:summary="@string/pref_summary__folder"
            android:title="@string/pref_title__folder"
            app:content="@xml/zim_preferences_folder" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title__inputs">
        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_notifications_paused"
            android:layout="@layout/sub_preference"
            android:summary="@string/pref_summary__notifications"
            android:title="@string/pref_title__notifications"
            app:content="@xml/zim_preferences_notification" />

        <!--<org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_gesture"
            android:layout="@layout/sub_preference"
            android:summary="@string/pref_summary__inputs"
            android:title="@string/pref_title__inputs"
            app:content="@xml/zim_preferences_gestures" />-->
        <!--
        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_behavior"
            android:layout="@layout/sub_preference"
            android:summary="@string/pref_summary__behavior"
            android:title="@string/pref_title__behavior"
            app:content="@xml/zim_preferences_behavior" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title__others">

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_debug"
            android:key="developerOptions"
            android:layout="@layout/sub_preference"
            android:summary="@string/pref_summary__developer"
            android:title="@string/developer_options_title"
            app:content="@xml/zim_preferences_dev_options" />

        <org.zimmob.zimlx.settings.ui.SubPreference
            android:icon="@drawable/ic_more_horiz"
            android:layout="@layout/sub_preference"
            android:summary="@string/pref_summary__advanced"
            android:title="@string/pref_title__advanced"
            app:content="@xml/zim_preferences_advanced"
            app:longClickContent="@xml/zim_preferences_advanced" />

        <Preference
            android:icon="@drawable/ic_information"
            android:layout="@layout/sub_preference"
            android:summary="@string/about_pref_summary"
            android:title="@string/about_title">

            <!--suppress AndroidDomInspection (Injected at compile time) -->
            <intent
                android:targetClass="org.zimmob.zimlx.settings.ui.MoreInfoActivity"
                android:targetPackage="@string/application_id" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>