<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_title__gestures">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pullDownActionTexts"
            android:entryValues="@array/pullDownActionValues"
            android:key="pref_pulldownAction"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pull_down_action_pref_title" />

        <ListPreference
            android:defaultValue=""
            android:entries="@array/dt2sHandlers"
            android:entryValues="@array/dt2sHandlerClasses"
            android:key="pref_dt2sHandler"
            android:summary="%s"
            android:title="@string/dt2s_title" />

    </PreferenceCategory>

    <SeekBarPreference
        android:defaultValue="30"
        android:key="@string/pref_key__overall_animation_speed_modifier"
        android:max="100"
        android:summary="@string/pref_summary__overall_animation_speed_modifier"
        android:title="@string/pref_title__overall_animation_speed_modifier"
        app:min="1" />

</android.support.v7.preference.PreferenceScreen>